translation from rule to csparql query implemented rest skeleton ready api for observer was changed to the conventional one